// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkFieldset should render as disabled when checkbox component is disabled and required 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <label
      class="bpk-checkbox bpk-checkbox--disabled"
      data-backpack-ds-component="Checkbox"
    >
      <input
        aria-invalid="false"
        aria-label="I accept the terms and conditions"
        class="bpk-checkbox__input"
        data-indeterminate="false"
        disabled=""
        id="terms_and_conditions_checkbox"
        name="terms_and_conditions"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="bpk-checkbox__label"
      >
        I accept the terms and conditions
      </span>
    </label>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render as disabled when input component is disabled and required 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label bpk-label--disabled"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-invalid="false"
      aria-required="true"
      class="bpk-input"
      data-backpack-ds-component="Input"
      disabled=""
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render as disabled when select component is disabled and required 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label bpk-label--disabled"
        data-backpack-ds-component="Label"
        for="fruits_select"
      >
        Fruits
      </label>
    </div>
    <select
      aria-invalid="false"
      aria-required="true"
      class="bpk-select"
      disabled=""
      id="fruits_select"
      name="fruits"
    >
      <option
        value=""
      >
        Please select...
      </option>
      <option
        value="apples"
      >
        Apples
      </option>
      <option
        value="oranges"
      >
        Oranges
      </option>
      <option
        value="pears"
      >
        Pears
      </option>
      <option
        disabled=""
        value="tomato"
      >
        Tomato
      </option>
    </select>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly when disabled with input component and "valid" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label bpk-label--disabled"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="bpk-input bpk-input--valid"
      data-backpack-ds-component="Input"
      disabled=""
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly when disabled with input component and "valid" attribute equal to false 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label bpk-label--invalid bpk-label--disabled"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-describedby="name_input_validation_message"
      aria-invalid="true"
      aria-required="false"
      class="bpk-input bpk-input--invalid"
      data-backpack-ds-component="Input"
      disabled=""
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with checkbox component 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <label
      class="bpk-checkbox"
      data-backpack-ds-component="Checkbox"
    >
      <input
        aria-invalid="false"
        aria-label="I accept the terms and conditions"
        class="bpk-checkbox__input"
        data-indeterminate="false"
        id="terms_and_conditions_checkbox"
        name="terms_and_conditions"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="bpk-checkbox__label"
      >
        I accept the terms and conditions
      </span>
    </label>
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation bpk-form-validation--is-checkbox"
            id="terms_and_conditions_checkbox_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            You must accept the terms and conditions to continue
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with checkbox component and "required" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <label
      class="bpk-checkbox"
      data-backpack-ds-component="Checkbox"
    >
      <input
        aria-invalid="false"
        aria-label="I accept the terms and conditions"
        class="bpk-checkbox__input"
        data-indeterminate="false"
        id="terms_and_conditions_checkbox"
        name="terms_and_conditions"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="bpk-checkbox__label"
      >
        I accept the terms and conditions
        <span
          class="bpk-checkbox__asterisk"
        >
          *
        </span>
      </span>
    </label>
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation bpk-form-validation--is-checkbox"
            id="terms_and_conditions_checkbox_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            You must accept the terms and conditions to continue
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with input component 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="bpk-input"
      data-backpack-ds-component="Input"
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="name_input_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please enter a name
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with input component and "description" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-describedby="name_input_description"
      aria-invalid="false"
      aria-required="false"
      class="bpk-input"
      data-backpack-ds-component="Input"
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
    <span
      class="bpk-fieldset__description"
      id="name_input_description"
    >
      Your full name exactly as stated in your passport.
    </span>
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="name_input_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please enter a name
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with input component and "disabled" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="bpk-input"
      data-backpack-ds-component="Input"
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="name_input_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please enter a name
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with input component and "required" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
        <span
          class="bpk-label__asterisk"
        >
          *
        </span>
      </label>
    </div>
    <input
      aria-invalid="false"
      aria-required="true"
      class="bpk-input bpk-input--valid"
      data-backpack-ds-component="Input"
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="name_input_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please enter a name
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with input component and "valid" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="bpk-input bpk-input--valid"
      data-backpack-ds-component="Input"
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="name_input_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please enter a name
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with input component and "valid" attribute equal to false 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label bpk-label--invalid"
        data-backpack-ds-component="Label"
        for="name_input"
      >
        Name
      </label>
    </div>
    <input
      aria-describedby="name_input_validation_message"
      aria-invalid="true"
      aria-required="false"
      class="bpk-input bpk-input--invalid"
      data-backpack-ds-component="Input"
      id="name_input"
      name="name"
      placeholder="e.g. Joe Bloggs"
      type="text"
      value=""
    />
    <div
      style="height: auto; overflow: visible; transition: height 200ms ease;"
    >
      <div>
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation bpk-form-validation--appear"
            id="name_input_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please enter a name
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with select component 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="fruits_select"
      >
        Fruits
      </label>
    </div>
    <select
      aria-invalid="false"
      aria-required="false"
      class="bpk-select"
      id="fruits_select"
      name="fruits"
    >
      <option
        value=""
      >
        Please select...
      </option>
      <option
        value="apples"
      >
        Apples
      </option>
      <option
        value="oranges"
      >
        Oranges
      </option>
      <option
        value="pears"
      >
        Pears
      </option>
      <option
        disabled=""
        value="tomato"
      >
        Tomato
      </option>
    </select>
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="fruits_select_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please select a fruit
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`BpkFieldset should render correctly with select component and "required" attribute 1`] = `
<DocumentFragment>
  <fieldset
    class="bpk-fieldset"
    data-backpack-ds-component="Fieldset"
  >
    <div
      class="bpk-fieldset__label"
    >
      <label
        class="bpk-label"
        data-backpack-ds-component="Label"
        for="fruits_select"
      >
        Fruits
        <span
          class="bpk-label__asterisk"
        >
          *
        </span>
      </label>
    </div>
    <select
      aria-invalid="false"
      aria-required="true"
      class="bpk-select"
      id="fruits_select"
      name="fruits"
    >
      <option
        value=""
      >
        Please select...
      </option>
      <option
        value="apples"
      >
        Apples
      </option>
      <option
        value="oranges"
      >
        Oranges
      </option>
      <option
        value="pears"
      >
        Pears
      </option>
      <option
        disabled=""
        value="tomato"
      >
        Tomato
      </option>
    </select>
    <div
      style="height: 0px; overflow: visible; transition: height 200ms ease;"
    >
      <div
        style="display: none;"
      >
        <div
          class="bpk-form-validation__container"
        >
          <div
            class="bpk-form-validation"
            id="fruits_select_validation_message"
          >
            <span
              class="bpk-form-validation__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5M12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18m1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
                  />
                </svg>
              </span>
            </span>
            Please select a fruit
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;
